--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    namespace 'com.example.notesapp'
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.notesapp"
         minSdk 21
-        targetSdk 30
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
